--- a/serve-here.cabal
+++ b/serve-here.cabal
@@ -2,7 +2,7 @@ name:                serve-here
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
-homepage:            http://github.com/githubuser/rubik#readme
+homepage:            https://github.com/3noch/serve-here#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Elliot Cameron <elliot@typeclad.com>
@@ -33,4 +33,4 @@ executable serve-here
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/rubik
+  location: https://github.com/3noch/serve-here.git
