--- a/serve-here.cabal
+++ b/serve-here.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 executable serve-here
   hs-source-dirs:      src
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , optparse-applicative
                      , servant
